--- a/app/globals.css
+++ b/app/globals.css
@@ -78,8 +78,8 @@
   }
 }
 
-body, html, :root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+body,
+html,
+:root {
+  @apply scroll-smooth h-full m-0 p-0;
 }
